# RISC-V-Forth

./: .gitignore  Dockerfile  Makefile  README.md  asm_benchmark_flash.sh  flash.sh  resolved_trace.txt  run_qemu.sh  serial.sh  testlog.txt  trace.txt
.github/workflows/: build_and_qemu_test.yml  build_and_test.yml  build_forth_shell.yml  build_hardware_test_container.yml  build_toolchain_container.yml  ch32-build.yml
Forth/: VmMacros.S  assembler.forth  defines.S  system.forth  uart.S  utils.S  vm.S
USART_Printf/User/: VmMacros.S  main.c  system.forth  vm.S
asm_benchmark/: main.S
ch32/: Link.ld  ch32v20x_conf.h  ch32v20x_it.c  debug.c  debug.h  main.c  startup_ch32v20x_D6.S
forth_shell/: Cargo.toml
forth_shell/src/: connected_state.rs  device_connection_states.rs  forth_state.rs  initial_handshake_state.rs  main.rs  requesting_device_reset_state.rs
qemu/: baremetal.ld  hello.S  ns16550a.S
tools/: Benchmark.py  Compiler.py  ResolveTraceAddress.py  conftest.py  test_e2e.py
tools/benchmark_data/: benchmark_asm_data.txt  benchmark_forth_data.txt  benchmark_log.txt  data_key.txt
tools/forth_shell/src/: device_connection_states.rs  forth_state.rs  main.rs  showWords_parser.rs
tools/hardware_test_runner/: Dockerfile  autoflash.sh  benchmark.sh  bootloader.py
wchisp-linux-aarch64/: wchisp
