[package]
name = "forth_shell"
version = "0.1.0"
description = "A shell for the risc-v forth"
authors = ["Jim Marshall <jimmarshall35@gmail.com>"]
license = "NONE"
edition = "2024"

[dependencies]

crossterm = "0.29.0"
serialport = "4"
clap = { version = "4", features = ["derive"] }


# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true